--- a/tests/testdata/standard/index.html
+++ b/tests/testdata/standard/index.html
@@ -1,6 +1,32 @@
-<h2>基本モジュール</h2>
-<p>汎用的なHTMLモジュール環境を提供します。</p>
-<ul>
-<li><a href="#" class="px2-a">標準的なビュレット付きリンク</a></li>
-</ul>
-<h2>カラムモジュール</h2>
+<figure class="px2-embedded-media">
+	<div class="px2-embedded-media__youtube-media"><iframe width="753" height="445" src="https://www.youtube.com/embed/yUnckFu7SNs?list=PL5ZUBZrE-CkDSYUvVZNDCILrzGhRG2U8L" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+		<figcaption class="px2-embedded-media__caption"><p>YouTube動画のサンプルです</p>
+</figcaption>
+	</figure>
+<figure class="px2-embedded-media">
+	<div class="px2-embedded-media__common-html"><iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Ftomk79%2Fposts%2F2214827688570701&width=500" width="500" height="517" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe></div>
+		<figcaption class="px2-embedded-media__caption">
+</figcaption>
+	</figure>
+<figure class="px2-embedded-media">
+	<div class="px2-embedded-media__twitter-tweet"><blockquote class="twitter-tweet" data-lang="ja"><p lang="ja" dir="ltr">民主主義 とは、 万人の叡智を結集する技術</p>&mdash; Tomoya Koyanagi (@tomk79) <a href="https://twitter.com/tomk79/status/1109129020036141056?ref_src=twsrc%5Etfw">2019年3月22日</a></blockquote>
+<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+</div>
+		<figcaption class="px2-embedded-media__caption">
+</figcaption>
+	</figure>
+<div class="px2-float-media">
+  <div class="px2-float-media__r1of3">
+    <figure class="px2-embedded-media">
+	<div class="px2-embedded-media__youtube-media"><iframe width="951" height="535" src="https://www.youtube.com/embed/yUnckFu7SNs?list=PL5ZUBZrE-CkDSYUvVZNDCILrzGhRG2U8L" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+		<figcaption class="px2-embedded-media__caption"><p>YouTube動画のサンプルです</p>
+</figcaption>
+	</figure>
+  </div>
+  <div class="px2-float-media__body-rect">
+    <h2>Float Media Block</h2>
+<p>このモジュールは、テキストを回り込むメディア表示領域を作成します。</p>
+<p>回り込む方向を右か左のいずれかで選択します。 メディアの大きさは、幅 1/2、1/3、1/4 のサイズから選択することができます。</p>
+<p>また、テキスト領域を回り込むか、矩形とするかを選択することもできます。</p>
+  </div>
+</div><!-- /.px2-float-media -->
