new module: インタビュワー、回答者、メンバープロフィール欄 を追加

--- a/tests/testdata/standard/index.html
+++ b/tests/testdata/standard/index.html
@@ -1,32 +1,52 @@
-<figure class="px2-embedded-media">
-	<div class="px2-embedded-media__youtube-media"><iframe width="753" height="445" src="https://www.youtube.com/embed/yUnckFu7SNs?list=PL5ZUBZrE-CkDSYUvVZNDCILrzGhRG2U8L" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
-		<figcaption class="px2-embedded-media__caption"><p>YouTube動画のサンプルです</p>
-</figcaption>
-	</figure>
-<figure class="px2-embedded-media">
-	<div class="px2-embedded-media__common-html"><iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Ftomk79%2Fposts%2F2214827688570701&width=500" width="500" height="517" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe></div>
-		<figcaption class="px2-embedded-media__caption">
-</figcaption>
-	</figure>
-<figure class="px2-embedded-media">
-	<div class="px2-embedded-media__twitter-tweet"><blockquote class="twitter-tweet" data-lang="ja"><p lang="ja" dir="ltr">民主主義 とは、 万人の叡智を結集する技術</p>&mdash; Tomoya Koyanagi (@tomk79) <a href="https://twitter.com/tomk79/status/1109129020036141056?ref_src=twsrc%5Etfw">2019年3月22日</a></blockquote>
-<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+<div class="px2-interview-article-member-profile">
+	<div class="px2-interview-article-member-profile__image">
+		<img src="./index_files/resources/photo_a.png" alt="少年&lt;A&gt; 写真" style="border-color: #228b22;" />
+	</div>
+	<div class="px2-interview-article-member-profile__body">
+		<div class="px2-interview-article-member-profile__name">少年&lt;A&gt;</div>
+		<div class="px2-interview-article-member-profile__title">開発者 &lt;ウェブ系&gt;</div>
+		<div class="px2-interview-article-member-profile__introduction"><p>ウェブ系エンジニアしてます。ウェブデザイナー、ウェブディレクターとしてウェブ制作の仕事に携わり、今はエンジニア職に流れ着きました。誰かのお仕事をちょっとだけ効率化するような支援ツールの開発が好き。オープンソースとMITライセンス大好き。人生後半は自由と民主主義のコントリビューターとして過ごす予定。</p>
+<p>ウェブ制作支援ツール <a href="https://pickles2.pxt.jp/" target="_blank">Pickles 2</a> をオープンソースで開発しています。</p>
 </div>
-		<figcaption class="px2-embedded-media__caption">
-</figcaption>
-	</figure>
-<div class="px2-float-media">
-  <div class="px2-float-media__r1of3">
-    <figure class="px2-embedded-media">
-	<div class="px2-embedded-media__youtube-media"><iframe width="951" height="535" src="https://www.youtube.com/embed/yUnckFu7SNs?list=PL5ZUBZrE-CkDSYUvVZNDCILrzGhRG2U8L" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
-		<figcaption class="px2-embedded-media__caption"><p>YouTube動画のサンプルです</p>
-</figcaption>
-	</figure>
-  </div>
-  <div class="px2-float-media__body-rect">
-    <h2>Float Media Block</h2>
-<p>このモジュールは、テキストを回り込むメディア表示領域を作成します。</p>
-<p>回り込む方向を右か左のいずれかで選択します。 メディアの大きさは、幅 1/2、1/3、1/4 のサイズから選択することができます。</p>
-<p>また、テキスト領域を回り込むか、矩形とするかを選択することもできます。</p>
-  </div>
-</div><!-- /.px2-float-media -->
+	</div>
+</div>
+<div class="px2-interview-article-member-profile">
+	<div class="px2-interview-article-member-profile__image">
+		<img src="./index_files/resources/photo_b.png" alt="少年B 写真" style="border-color: #ff6347;" />
+	</div>
+	<div class="px2-interview-article-member-profile__body">
+		<div class="px2-interview-article-member-profile__name">少年B</div>
+		<div class="px2-interview-article-member-profile__title">開発者</div>
+		<div class="px2-interview-article-member-profile__introduction"><p>ウェブ系エンジニアしてます。ウェブデザイナー、ウェブディレクターとしてウェブ制作の仕事に携わり、今はエンジニア職に流れ着きました。誰かのお仕事をちょっとだけ効率化するような支援ツールの開発が好き。オープンソースとMITライセンス大好き。人生後半は自由と民主主義のコントリビューターとして過ごす予定。</p>
+<p>ウェブ制作支援ツール <a href="https://pickles2.pxt.jp/" target="_blank">Pickles 2</a> をオープンソースで開発しています。</p>
+</div>
+	</div>
+</div>
+<div class="px2-interview-article-interviewer-comment">
+	<p>本日はよろしくお願いいたします。</p>
+
+</div>
+<div class="px2-interview-article-interviewee-comment">
+	<div class="px2-interview-article-interviewee-comment__name" style="color: #228b22;">少年&lt;A&gt;</div>	<p>よろしくお願いします。</p>
+
+</div>
+<div class="px2-interview-article-interviewee-comment">
+	<div class="px2-interview-article-interviewee-comment__name" style="color: #ff6347;">少年B</div>	<p>よろしくお願いします。</p>
+
+</div>
+<div class="px2-interview-article-interviewer-comment">
+	<p>どうして、<a href="https://ja.wikipedia.org/wiki/%E7%B5%8C%E6%B8%88%E7%9A%84%E4%B8%8D%E5%B9%B3%E7%AD%89" target="_blank">経済格差</a>は小さい方が良いのでしょうか？</p>
+<p>おカネとは何でしょう？</p>
+
+</div>
+<div class="px2-interview-article-interviewee-comment">
+	<div class="px2-interview-article-interviewee-comment__name" style="color: #228b22;">少年&lt;A&gt;</div>	<p>経済的な格差が広がっていくことが問題とされます。これは、富の偏在、つまり おカネ持ちがどんどんおカネ持ちになっていき、貧困がより深刻な貧困となって広がっていくことです。</p>
+<p>一方で、真面目に働き、多くの生活者に貢献した者に、より多くの見返りがあるのは当然だ、とも思えます。実際に、そのようにして、たくさんのモノやサービスが生まれ、私達の暮らしは便利に、安全に、豊かになりました。</p>
+<p>おカネに総量がある以上、一部の貢献者にだけ見返りとして多くの収入があれば、その分だけ他の誰かのおカネが減るはずで、格差が広がることになります。どちらも当たり前のように納得してしまいますが、この2つの立場は対立していることになりそうです。</p>
+<p><a href="https://www.pxt.jp/ja/diary/article/2019/307_why_should_the_economic_gap_be_small/" target="_blank">本稿</a>では、経済格差拡大がなぜ問題なのか？ それとも実は問題ではないのか？ について考えたいと思います。</p>
+
+</div>
+<div class="px2-interview-article-interviewee-comment">
+		<p>おカネは、現代社会のあらゆる活動に関わっています。私達の日常生活の根底を流れている基盤となっています。ゆえに、おカネの本質を問うことは難しく、文脈や立場によって様々な側面を見つけることができると思います。 ここではその1つの側面として、 数値化され可視化された権力の量 としての おカネ について考えます。</p>
+
+</div>
